Made some order.

--- a/Latex/report.tex
+++ b/Latex/report.tex
@@ -609,13 +609,13 @@ corresponds to the maximum time that is taken between all the $20$ different
 instances (time in the worst case).
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.9\linewidth]{Code/n-2n.png}
+  \includegraphics[width=.9\linewidth]{../Code/n-2n.png}
   \caption{$n$ and $2n$ walls}
   \label{n-2n}
 \end{figure}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.9\linewidth]{Code/sat-unsat.png}
+  \includegraphics[width=.9\linewidth]{../Code/sat-unsat.png}
   \caption{Sat and unsat}
   \label{sat-unsat}
 \end{figure}
@@ -651,7 +651,7 @@ size.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.9\linewidth]{Code/ratio.png}
+  \includegraphics[width=.9\linewidth]{../Code/ratio.png}
   \caption{Ratio between wall cells and variables}
   \label{ratio}
 \end{figure}
